--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,11 @@ pandas==2.2.2
 numpy==2.0.0
 streamlit-authenticator==0.3.2
 streamlit-lightweight-charts==0.7.20
+sentence-transformers==3.2.0
+scikit-learn==1.5.2
+tenacity~=8.5.0
+umap-learn==0.5.6
+matplotlib==3.9.1
+plotly==5.24.1
+umap==0.1.1
+nltk==3.9.1
